# MSGA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: instruction.md
include/: msga.h  msga_buffer.h  msga_code.h  msga_config.h  msga_debug.h  msga_hook.h  msga_io.h  msga_type.h  msga_utils.h
include/io/: pe.h
include/msga/: allocator.h  arch.h  code.h  config.h  io.h  manager.h  types.h
include/msga/arch/: x64.h  x86.h  x86_64.h
include/msga/io/: elf.h  pe.h  runtime.h
src/: buffer.c  code.cpp  error.c  hook.c  io.c  io.cpp  manager.cpp  msga.c  utils.h
src/abi/: aarch32.c  aarch64.c  amd64.c  thumb.c  thumb.cpp  x86.c  x86_64.c  x86_64.h
src/arch/: ihde.cpp  ihde.h  ihde32.cpp  ihde64.cpp  x64.cpp  x86.cpp  x86_64.cpp  x86_64.cpp.BAK
src/io/: elf.c  elf.cpp  elf_debug.cpp  helper.cpp  helper.h  pe.c  pe.cpp  pe_debug.cpp  runtime.c  runtime.cpp
src/io/platform/: none.c  unix.c  win.c
src/platform/: none.c  unix.c  win.c
tests/: CMakeLists.txt  drone.cpp  loader.cpp  pe.c  setup.h  target.cpp  test.c  test.h  test_hde.c  test_io.cpp  test_io_elf.cpp  test_io_pe.cpp  test_io_rt.cpp
tests/win32/: inject.cpp  noinject.cpp  nokill.cpp
